fix issue when input quantity at product detail page